<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main2Activity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingTop="2dp"
        android:paddingBottom="20dp"
        android:text="@string/title"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/detailTextView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY" />

            <include layout="@layout/detail" />

            <include layout="@layout/overview" />

            <TextView
                android:id="@+id/trailer_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trailer"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"/>

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/trailer_recyler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
            </ScrollView>

            <TextView
                android:id="@+id/review_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/review"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"/>

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/review_recycler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
            </ScrollView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>